@@ -11,6 +11,7 @@
 	<properties>
 		<activemq.version>5.3.0</activemq.version>
 		<ajp.version>1.3</ajp.version>
+		<aspectj.version>1.6.5</aspectj.version>
 		<ant.version>1.7.1</ant.version>
 		<ant-contrib.version>1.0b2</ant-contrib.version>
 		<apache-taglibs.version>1.1.2</apache-taglibs.version>
@@ -31,8 +32,10 @@
 		<groovy.version>1.6.7</groovy.version>
 		<hibernate.version>3.2.6.ga</hibernate.version>
 		<hibernate-tools.version>3.2.3.GA</hibernate-tools.version>
+		<hqapi.version>4.0.0.BUILD-SNAPSHOT</hqapi.version>
 		<httpclient.version>3.1</httpclient.version>
 		<j2ee-management.version>1.1</j2ee-management.version>
+        <jackson-mapper-asl.version>1.5.5</jackson-mapper-asl.version>
 		<jasypt.version>1.6</jasypt.version>
 		<jdom.version>1.1</jdom.version>
 		<jmock.version>1.2.0</jmock.version>
@@ -161,6 +164,11 @@
 				<artifactId>velocity</artifactId>
 				<version>${velocity.version}</version>
 			</dependency>
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-mapper-asl</artifactId>
+                <version>${jackson-mapper-asl.version}</version>
+            </dependency>
 			<!--  We use a version of dbunit that we patched -->
 			<dependency>
 				<groupId>org.hyperic</groupId>
@@ -197,6 +205,11 @@
 				<groupId>org.hyperic</groupId>
 				<artifactId>sigar</artifactId>
 				<version>${sigar.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hyperic.hq.hqapi</groupId>
+				<artifactId>hqapi1</artifactId>
+				<version>${hqapi.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jasypt</groupId>
@@ -503,6 +516,11 @@
 				<version>${mx4j.version}</version>
 			</dependency>
 			<dependency>
+    			<groupId>org.aspectj</groupId>
+    			<artifactId>aspectjtools</artifactId>
+    			<version>${aspectj.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.cenqua.clover</groupId>
 				<artifactId>clover</artifactId>
 				<version>${clover2.version}</version>
@@ -514,6 +532,17 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -574,9 +603,26 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
-						<argLine>-Xmx512m</argLine>
+						<argLine>-Xmx512m -XX:MaxPermSize=192m -XX:-UseGCOverheadLimit</argLine>
 						<enableAssertions>false</enableAssertions>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.0.3</version>
+					<configuration>
+						<attach>true</attach>
+					</configuration>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -647,7 +693,7 @@
 	    			<module>dist</module>
 			</modules>
 		</profile>
-			<profile>
+        <profile>
 			<id>no-dist</id>
 			<modules>
 					<module>hq-util</module>
@@ -661,6 +707,17 @@
 					<module>hq-uiplugin</module>
 					<module>hq-installer</module>
 					<module>hq-bootstrap</module>
+					<module>hq-web</module>
+			</modules>
+		</profile>
+        <profile>
+			<id>web-app</id>
+			<modules>
+					<module>hq-util</module>
+					<module>hq-common</module>
+					<module>hq-pdk</module>
+					<module>hq-rendit</module>
+					<module>hq-server</module>
 					<module>hq-web</module>
 			</modules>
 		</profile>
